--- a/style.css
+++ b/style.css
@@ -379,14 +379,13 @@ aside li {
   width: 100%;
   height: 100%;
 }
-
-.grid-6-about {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  justify-items: center;
-  align-items: center;
+.skills {
+  display: flex;
+  justify-content: space-between;
 }
-
+.skills ul:last-child {
+  margin-left: 0.8rem;
+}
 .grid-2-about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -446,9 +445,7 @@ aside li {
   aside {
     display: none;
   }
-  .grid-6-about {
-    grid-template-columns: repeat(3, 1fr);
-  }
+
   .button {
     padding: 0.5rem 0.7rem;
   }
