--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ aside li {
 
 .project-img img {
   width: 97%;
-  height: 100%;
+  height: 350px;
   border: 1px solid white;
 }
 
@@ -444,8 +444,19 @@ aside li {
   display: flex;
   justify-content: space-between;
 }
-
+/* Achivements */
+.box {
+  display: flex;
+}
+.alt {
+  width: 1rem;
+  display: flex;
+  align-items: flex-start;
+}
 @media (max-width: 850px) {
+  .project-img img {
+    height: 300px;
+  }
   aside {
     display: none;
   }
@@ -461,6 +472,9 @@ aside li {
 }
 
 @media (max-width: 768px) {
+  .project-img img {
+    height: 100%;
+  }
   .grid-2-about {
     grid-template-columns: 1fr;
     grid-gap: 1rem;
